. inclusão de novo xml: Combinadifere . criaçao de novo grupo, grupoC com o novo xml . troca do nome do título: de OneBot para Onebot . troca do text doo login para password

--- a/www/bot.html
+++ b/www/bot.html
@@ -29,7 +29,7 @@
 	<meta http-equiv="pragma" content="no-cache">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="referrer" content="origin">
-    <title>OneBot</title>
+    <title>Onebot</title>
 <link href="css/bundle-608e8bfba6.css" rel="stylesheet" />    <link rel="stylesheet" href="css/binary.css">
 <link href="css/bot-8189fefe7b.css" rel="stylesheet" /></head>
 
@@ -93,7 +93,7 @@
             <div class="logo-wrapper">
                 <a href="." id="logo">
                     <div class="logo-parent">
-                            <img class="responsive" src="image/logo_main.png" alt="OneBot" />
+                            <img class="responsive" src="image/logo_main.png" alt="Onebot" />
                     </div>
                 </a>
             </div>
