--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
 	<meta http-equiv="pragma" content="no-cache">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="referrer" content="origin">
-	<title>Bem vindo ao OneBot</title>
+	<title>Bem vindo ao Onebot</title>
 <link href="css/index-50879bf249.css" rel="stylesheet" /><link rel="stylesheet" href="css/binary.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gridle@2.0.48/css/grid-flex.css" integrity="sha256-J4p1c+K4tD3rnyfA0ztZpoQR0+mBhDTZ/J+YNOalc0k=" crossorigin="anonymous">
 </head>
@@ -68,7 +68,7 @@
 	<div id="main">
 		<div>
 			<div class="content show-on-load">
-				<h1 class="center" data-i18n-text="OneBot"></h1>
+				<h1 class="center" data-i18n-text="Onebot"></h1>
                 <h3 class="center" data-i18n-text="A maior inovação no mercado de operações automatizadas!"></h3>
       		<div style="margin-left:-130px">
                 <video class="elementor-video" src="https://videos.files.wordpress.com/U7UcsR4U/apresentac3a7c3a3o_hd.mp4" autoplay="" controls="" controlslist="nodownload"></video>
