--- a/www/login.html
+++ b/www/login.html
@@ -29,7 +29,7 @@
 	<meta http-equiv="pragma" content="no-cache">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="referrer" content="origin">
-    <title>OneBot</title>
+    <title>Onebot</title>
 <link href="css/bundle-608e8bfba6.css" rel="stylesheet" />    <link rel="stylesheet" href="css/binary.css">
 <link href="css/bot-8189fefe7b.css" rel="stylesheet" />  </head>
 
@@ -39,7 +39,7 @@
         <div class="logo-wrapper">
           <a href="https://www.onebotmembers.com" target="blank" id="logo">
             <div class="logo-parent">
-                <img class="responsive" src="image/logo_main.png" alt="OneBot">
+                <img class="responsive" src="image/logo_main.png" alt="Onebot">
             </div>
           </a>
         </div>
@@ -54,7 +54,7 @@
                 <form>
                     <table id="details" style="width: 100%;">
                         <tr><td style="text-align: right"><b>Email</b></td><td><input type="text" id="loginUser" value="" maxlength=30 /></td></tr>
-                        <tr><td style="text-align: right"><b>Senha</b></td><td><input type="text" id="passwordUser" value="" maxlength=15 /><p class="hint no-margin"></td></tr>
+                        <tr><td style="text-align: right"><b>Senha</b></td><td><input type="password" id="passwordUser" value="" maxlength=15 /><p class="hint no-margin"></td></tr>
                         <tr><td style="text-align: right"><button class="button" id="submitUser" type="button" onclick="validate()">Enviar</button></td></tr>
                     </table>
                 </form>
