--- a/www/bot.html
+++ b/www/bot.html
@@ -31,7 +31,7 @@
 	<meta name="referrer" content="origin">
     <title>Onebot</title>
 <link href="css/bundle-608e8bfba6.css" rel="stylesheet" />    <link rel="stylesheet" href="css/binary.css">
-<link href="css/bot-8189fefe7b.css" rel="stylesheet" /></head>
+<link href="css/bot-6ab6a20641.css" rel="stylesheet" /></head>
 
 <body>
     <div id="tour"></div>
@@ -256,6 +256,7 @@
 <script>
 function logout(){
     delete window.localStorage['config'];
+    window.localStorage.clear();
     window.location.href = '/';
 }
 
