ajustes de textos

--- a/www/bot.html
+++ b/www/bot.html
@@ -83,8 +83,7 @@
 </div>
         </div>
         <div id="server-status" class="right-header"></div>
-        <a id="contact-us" class="right-header" target="_blank" href="#"
-            data-i18n-text="Contact us"></a>
+        <p id="contact-us" class="right-header">Sistema Online</p>
         <div id="server-time" class="right-header"></div>
     </div>
 
@@ -197,7 +196,7 @@
             </ul>
         </li>
     </ul>
-    <div id="dialogProfile" title="User Profile">
+    <div id="dialogProfile" title="Perfil do Usário">
         <table>
             <tbody>
                 <tr><th>Nome</th><td><span id="profileName"></span></td></tr>
@@ -218,10 +217,10 @@
                 <strong>Apelido:</strong>
                 <div id="loggedNickname" class="spaceBottom"></div>
                 <div class="spaceBottom">
-                    <button id="btnProfile" onclick="profile()">Profile</button>
+                    <button id="btnProfile" onclick="profile()">Perfil</button>
                 </div>
                 <div class="spaceBottom">
-                    <button id="btnLogout" onclick="logout()">Logout</button>
+                    <button id="btnLogout" onclick="logout()">Sair</button>
                 </div>
                 <strong>Tutoriais:</strong>
                 <div class="spaceBottom">
